--- a/cv/package.json
+++ b/cv/package.json
@@ -23,6 +23,7 @@
     "rxjs": "~6.3.3",
     "smoothscroll-polyfill": "^0.4.3",
     "tslib": "^1.9.0",
+    "typed.js": "^2.0.10",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
