--- a/angular.json
+++ b/angular.json
@@ -61,7 +61,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "profil:build"
+            "browserTarget": "cv:build"
           },
           "configurations": {
             "production": {
@@ -72,7 +72,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "profil:build"
+            "browserTarget": "cv:build"
           }
         },
         "test": {
@@ -115,11 +115,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "profil:serve"
+            "devServerTarget": "cv:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "profil:serve:production"
+              "devServerTarget": "cv:serve:production"
             }
           }
         },
@@ -135,5 +135,5 @@
       }
     }
   },
-  "defaultProject": "profil"
+  "defaultProject": "cv"
 }
