--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "husky": {
+    "hooks": {
+      "post-update": "npm build && git commit -m \"update dist folder\" && git subtree push --prefix dist origin gh-pages"
+    }
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.1.0",
@@ -27,7 +32,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.5",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "^7.2.8",
     "@angular/language-service": "~7.1.0",
@@ -35,6 +40,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "husky": "^1.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
