--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "husky": {
     "hooks": {
-      "post-update": "npm build && git commit -m \"update dist folder\" && git subtree push --prefix dist origin gh-pages"
+      "pre-push": "npm run build && git commit -m \"update dist folder\" && git subtree push --prefix dist origin gh-pages"
     }
   },
   "private": true,
