--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run build && git commit -m \"update dist folder\" && git subtree push --prefix dist origin gh-pages"
+      "post-commit": "npm run build",
+      "pre-push": "git commit -m 'update dist folder' ",
+      "post-receive": "git subtree push --prefix dist origin gh-pages"
     }
   },
   "private": true,
