--- a/package.json
+++ b/package.json
@@ -17,22 +17,22 @@
     "@angular/animations": "~7.1.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
+    "@angular/core": "~8.2.14",
     "@angular/forms": "~7.1.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "core-js": "^2.6.9",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.5.3",
     "smoothscroll-polyfill": "^0.4.4",
     "tslib": "^1.10.0",
     "typed.js": "^2.0.11",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "^7.2.15",
+    "@angular/cli": "~8.3.19",
+    "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.7",
@@ -49,6 +49,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "^3.5.3"
   }
 }
